--- a/src/app/shared/auth/auth-footer/auth-footer.component.html
+++ b/src/app/shared/auth/auth-footer/auth-footer.component.html
@@ -1,5 +1,5 @@
 <div class="col-12 col-md-12 col-lg py-2">
-    <span class="text-secondary small">Copyright @2023</span>
+    <span class="text-secondary small">Copyright @{{date | date:'yyyy'}}</span>
 </div>
 <div class="col-12 col-md-12 col-lg-auto align-self-center">
     <ul class="nav small">
