--- a/src/app/shared/auth/auth-header/auth-header.component.html
+++ b/src/app/shared/auth/auth-header/auth-header.component.html
@@ -3,11 +3,11 @@
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="/auth/login">
             <div class="row">
-                <div class="col-auto"><img src="assets/img/favicon48.png" name="logoimage" class="mx-100" alt="" /></div>
-                <div class="col ps-0 align-self-center">
+                <div class="col-auto"><img src="https://cdn.discordapp.com/attachments/1011378535186845790/1182814216432926730/ALTUX_LOGO.png?ex=65861094&is=65739b94&hm=0bc360183d75ee01a6d543a2c00a356a02a8d8ffaf91325c57047eaf3d32a340&" name="logoimage" class="mx-100" alt="" /></div>
+                <!-- <div class="col ps-0 align-self-center">
                     <h5 class="fw-normal text-dark">WinDOORS</h5>
                     <p class="small text-secondary">Admin App UI</p>
-                </div>
+                </div> -->
             </div>
         </a>
         <!-- <div>
