--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 col-md col-lg py-2">
-            <span class="text-secondary small">Copyright @2023</span>
+            <span class="text-secondary small">Copyright @{{date | date:'yyyy'}}</span>
         </div>
         <div class="col-12 col-md-auto col-lg-auto align-self-center">
             <ul class="nav small">
