--- a/src/app/alumno/pages/dashboard/dashboard.component.html
+++ b/src/app/alumno/pages/dashboard/dashboard.component.html
@@ -2,8 +2,8 @@
 <div class="container-fluid">
     <div class="row align-items-center page-title">
         <div class="col-12 col-md mb-2 mb-sm-0">
-            <h5 class="mb-0">Mi Dashboard</h5>
-            <p class="text-secondary">Infinity, tu aula virtual inteligente.</p>
+            <h5 class="mb-0">MI INFINITY</h5>
+            <p class="text-secondary">Aula virtual inteligente.</p>
         </div>
     </div>
 </div>
@@ -21,7 +21,7 @@
                     <!-- <iframe src="https://drive.google.com/file/d/1UM0JeMv_9doVSuOXW9xiTclyj5YvyIy0/preview" width="640" height="480" allow="autoplay"></iframe> -->
                     <!-- Swiper daily quote -->
                     <swiper [slidesPerView]="1" [spaceBetween]="0" [pagination]="false" [autoplay]="{delay: 2000}" class="dailyquote mt-4 w-100 mx-0">
-                        <ng-template swiperSlide>
+                        <!-- <ng-template swiperSlide>
                             <div class="row align-items-center">
                                 <div class="col-auto">
                                     <i class="bi bi-calendar-event h6 avatar avatar-40 rounded-circle bg-light-theme"></i>
@@ -36,15 +36,15 @@
                                     <p class="lead">Your 5 partner and our CEO's <span class="text-gradient">birthday</span> today.</p>
                                 </div>
                             </div>
-                        </ng-template>
+                        </ng-template> -->
                         <ng-template swiperSlide>
                             <div class="row align-items-center">
                                 <div class="col-auto">
                                     <i class="bi bi-quote h5 avatar avatar-40 rounded-circle bg-light-theme"></i>
                                 </div>
                                 <div class="col">
-                                    <h5 class="fw-normal text-gradient">Winners don't do different things, they do things differently</h5>
-                                    <p class="fw-light">Shiv Khera <cite title=" Source Title">You Can Win: A Step by Step Tool for Top Achievers</cite>
+                                    <h5 class="fw-normal text-gradient">Actualizados marcamos la diferencia.</h5>
+                                    <p class="fw-light text-gradient">INFINITY </p>
                                 </div>
                             </div>
                         </ng-template>
@@ -182,17 +182,17 @@
                             <swiper [slidesPerView]="1" [spaceBetween]="0" [pagination]="false" [autoplay]="{delay: 2000}" class="image-swiper w-200 h-100 text-center">
                                 <ng-template swiperSlide>
                                     <i class="bi bi-chat-right-dots h4 text-success mb-3 d-block"></i>
-                                    <h6>Chat Communication</h6>
-                                    <p class="small text-secondary">From the top right corner you can have access to chat panel and click on any user chat window 
-                                        interface will be open.</p>
+                                    <h6>RECUERDA ESTAR ATENTO A TU CRONOGRAMA DE ACTIVIDADES</h6>
+                                    <!-- <p class="small text-secondary">From the top right corner you can have access to chat panel and click on any user chat window 
+                                        interface will be open.</p> -->
                                 </ng-template>
                                 <ng-template swiperSlide>
                                     <i class="bi bi-person h4 text-theme mb-3 d-block"></i>
-                                    <h6>Onboarding</h6>
-                                    <p class="small text-secondary">User on-boarding comes in the sign up flow. Complete sign up process you will see the on-boarding 
-                                        pages at best UI UX.</p>
+                                    <h6>INGRESA A TU CLASE 10 MIN ANTES</h6>
+                                    <!-- <p class="small text-secondary">User on-boarding comes in the sign up flow. Complete sign up process you will see the on-boarding 
+                                        pages at best UI UX.</p> -->
                                 </ng-template>
-                                <ng-template swiperSlide>
+                                <!-- <ng-template swiperSlide>
                                     <i class="bi bi-search h4 text-danger mb-3 d-block"></i>
                                     <h6>Search Result</h6>
                                     <p class="small text-secondary">Try to type something in search box at header and big search result box will be appeared right away.</p>
@@ -202,7 +202,7 @@
                                     <h6 class="text-gradient">Spread love</h6>
                                     <p class="small text-secondary">If you like our template <b class="text-gradient">please share</b> to the beautiful world. World is
                                             waiting to get more good things. <i class="text-danger bi bi-heart-fill"></i></p>
-                                </ng-template>
+                                </ng-template> -->
                             </swiper>
                             <!-- image swiper ends -->
                         </div>
@@ -214,9 +214,8 @@
 </div>
 
 
-<div class="row" style="margin: 1%;">
+<!-- <div class="row" style="margin: 1%;">
     <div class="col-sm-12 col-md-6 col-lg-6 row">
-        <!-- project overview-->
         <div class="col-sm-12 col-md-12 col-lg-12 column-set mb-4">
             <div class="card border-0 h-100">
                 <div class="card-header">
@@ -454,7 +453,6 @@
             </div>
         </div>
     </div>
-    <!-- Devices installation and access -->
     <div class="col-sm-12 col-md-6 col-lg-6 column-set">
         <div class="card border-0 theme-green h-100">
             <div class="card-header">
@@ -488,8 +486,6 @@
                             <th class="w-200">Connection</th>
                             <th data-breakpoints="xs sm" class="w-80">Devices</th>
                             <th data-breakpoints="all">Status</th>
-                            <!-- <th data-breakpoints="all" data-title="Description">Description</th> -->
-                            <!-- <th>Action</th> -->
                         </tr>
                     </thead>
                     <tbody>
@@ -504,7 +500,6 @@
                                         <p class="mb-1 text-trucate w-100">Enfermería Estética</p>
                                         <p class="text-secondary small">
                                             Bloque 1
-                                            <!-- <span class="text-red">Katya Alcalde</span> -->
                                         </p>
                                     </div>
                                 </div>
@@ -744,50 +739,6 @@
                                 <span class="badge bg-red">Pendiente</span>
                             </td>
                         </tr>
-                        <!-- <tr>
-                            <td class="w-12"></td>
-                            <td class="w-200">
-                                <div class="row">
-                                    <div class="col-auto">
-                                        <i class="bi bi-calendar avatar avatar-40 bg-light-yellow text-yellow rounded"></i>
-                                    </div>
-                                    <div class="col ps-0">
-                                        <p class="mb-1 text-trucate w-100">Meeting Room 2</p>
-                                        <p class="text-secondary small">
-                                            1.05 GHz | <span class="text-yellow">Idle</span>
-                                        </p>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <p class="text-trucate w-100"><b>5</b> <small class="text-secondary">No Jobs, Ads Blocker</small></p>
-                            </td>
-                            <td>
-                                <span class="badge bg-yellow">Idle</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="w-12"></td>
-                            <td class="w-200">
-                                <div class="row">
-                                    <div class="col-auto">
-                                        <i class="bi bi-calendar avatar avatar-40 bg-light-theme rounded"></i>
-                                    </div>
-                                    <div class="col ps-0">
-                                        <p class="mb-1 text-trucate w-100">Meeting Room 4</p>
-                                        <p class="text-secondary small">
-                                            2.4 GHz | <span class="text-green">Active</span>
-                                        </p>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <p class="text-trucate w-100"><b>10</b> <small class="text-secondary">No Jobs, Ads Blocker</small></p>
-                            </td>
-                            <td>
-                                <span class="badge bg-success">Active</span>
-                            </td>
-                        </tr> -->
                     </tbody>
                 </table>
             </div>
@@ -803,4 +754,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
